Name:                scanner
Version:             0.1
Description:         Smart City Applications Registry
License:             MIT
Author:              Pedro Martins
Maintainer:          pedromartins.pt@gmail.com
Build-Type:          Simple
Data-Files:          scanner.db
Cabal-Version:       >=1.2

Executable scn
  Build-Depends: scale, base, bytestring, parsec, process, template-haskell,
                 th-lift, syb, convertible, HDBC-sqlite3, HDBC, unix,
                 optparse-applicative, filepath, directory, regex-posix
  Main-is:  Scanner/Scanner.hs
  Other-Modules:
    Paths_scanner
    Scanner.Types
    Scanner.DBC
    Scanner.Deploy
    Scanner.Containers
  Hs-Source-Dirs: src

