Name:                scanner
Version:             0.1
Description:         Smart City Applications Registry
License:             MIT
Author:              Pedro Martins
Maintainer:          pedromartins.pt@gmail.com
Build-Type:          Simple
Data-Files:          scanner.db
Cabal-Version:       >=1.2

Executable scn
  Build-Depends: scaffold-base, base, bytestring, parsec, process, template-haskell,
                 th-lift, syb, convertible, HDBC-sqlite3, HDBC, unix,
                 optparse-applicative, filepath, directory, regex-posix,
                 configurator, text, haxr, network, http-server
  Main-is:  Scanner/Scanner.hs
  Other-Modules:
    Paths_scanner
    Scanner.DBC
    Scanner.Deploy
    Scanner.Containers
    Scanner.Query
    Scanner.Config
  Hs-Source-Dirs: src

Executable scnd
  Build-Depends: scaffold-base, base, bytestring, parsec, process, template-haskell,
                 th-lift, syb, convertible, HDBC-sqlite3, HDBC, unix,
                 optparse-applicative, filepath, directory, regex-posix,
                 configurator, text, haxr, http-server
  Main-is:  Scanner/Server.hs
  Other-Modules:
    Paths_scanner
    Scanner.DBC
    Scanner.Deploy
    Scanner.Containers
    Scanner.Query
    Scanner.Config
  Hs-Source-Dirs: src

